--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,5 +10,23 @@
     <h1>Guia de Perguntas</h1>
     <hr>
     <h3>Lista de Perguntas</h3>
+
+    <!-- exibição da variável definida no backend -->
+    <p>Nome: <%= nome %></p>
+    <p>Linguagem favorita: <%= lang %></p>
+    <p>Empresa: <%= empresa %></p>
+    <p>Inscritos no canal: <%= inscritos %></p>
+
+    <% if(msg == true){ %>
+        <h3>Isso é uma msg de erro!</h3>   
+    <%} else { %>
+        <h3>Nenhum erro!</h3>
+    <%}%>
+
+    <% produtos.forEach(function(produto) { %>
+        <hr>
+        <h3><%= produto.nome %></h3>
+        <h4><%= produto.preco %></h4>
+    <% }) %>
 </body>
 </html>
