--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -9,7 +9,24 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Estilo do bootstrap</h1>
+    
+    <div class="container">
+
+        <div class="card">
+            <div class="card-header">
+                <h3>Realizar pergunta</h3>
+            </div>
+            <div class="card-body">
+                <form>
+                    <label>Título</label>
+                    <input type="text" placeholder="Título" class="form-control">
+                    <br><label>Descrição</label>
+                    <textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
+                    <br><button class="btn btn-success">Perguntar</button>
+                </form>        
+            </div>
+        </div>
+    </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
