--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,13 +9,13 @@
         <a href="/perguntar" class="btn btn-primary">Perguntar</a>
         <hr>
         <% perguntas.forEach(pergunta => { %>
+            <br>
             <div class="card">
-                <br>
                 <div class="card-body">
                     <h3><%= pergunta.titulo %></h3>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-primary">Responder</button>
+                    <a href="/pergunta/<%= pergunta.id %>"><button class="btn btn-primary">Responder</button></a>
                 </div>
             </div>
         <% }) %>
